fixed the post's scrollbar issue and enlarged the tweet mask for ressponsive usage.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -278,7 +278,7 @@ img {
   background-color: #0000009e;
   border-radius: 20px;
   width: 90%;
-  overflow-y: hidden;
+  overflow: hidden;
   margin: 1.5rem 0;
   box-shadow: 0rem 0rem 1rem rgb(0 0 0 / 40%);
 }
